force-app/main/default/objects/Integration_Default_Values__mdt/Integration_Default_Values__mdt.object-meta.xml
<CustomObject>
    <label>Integration Default Values</label>
    <pluralLabel>Integration Default Values</pluralLabel>
</CustomObject>