force-app/main/default/objects/Integration_Default_Values__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The API default field name.</description>
    <inlineHelpText>The API default field name.</inlineHelpText>
    <label>Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>