force-app/main/default/objects/Integration_Default_Values__mdt/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>The API service which the default values is for.</description>
    <inlineHelpText>The API service which the default values is for.</inlineHelpText>
    <label>Service</label>
    <length>250</length>
    <type>Text</type>
</CustomField>