force-app/main/default/objects/Integration_Default_Values__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The default field value.</description>
    <inlineHelpText>The default field value.</inlineHelpText>
    <label>Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>